# rhino-mcp

./: GHCodeMCP_new.py  GHCodeMCP_new_simpl.py  GHCodeMCP_old_working.py  README.md  grasshopper_non-blcoking-socket_example.gh  grasshopper_non-blcoking-socket_example_b.gh  install.sh  main.py  requirements.txt  rhino_function_testing.py  rhino_mcp_architecture_plan.md  test.py
.cursor/rules/: projectbirefing.mdc
rhino_mcp/: .env.sample  .gitignore  INSTALL.md  LICENSE  QUICKSTART.md  README.md  gh_socket_server.py  grasshopper_mcp_client.gh  grasshopper_non-blcoking-socket_example.gh  hellow_world.py  main.py  pyproject.toml  requirements.txt  rhino_mcp_client.py  rhino_script.py  unnamed.gh  xxrhino_function_testing.py
rhino_mcp/rhino_mcp/: __init__.py  grasshopper_tools.py  replicate_tools.py  rhino_tools.py  server.py  utility_tools.py
